Further iPhone spacing fix

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -446,7 +446,7 @@ body {
 @media only screen and (max-width: 767px) {
 
 	body {
-		width: @6cols;
+		width: @5cols;
 		padding:0;
 	}
 
@@ -502,6 +502,8 @@ body {
 
 		div.cc-icons {
 			display:block;
+			margin-left:0;
+			margin-right:0;
 		}
 
 		p#license, p#madeWith {
@@ -511,6 +513,11 @@ body {
 
 	div.social {
 		width:auto;
+		padding-right:0;
+
+		a {
+			margin-left:0;
+		}
 	}
 }
 
